@@ -164,7 +164,12 @@ start using testing branch for experimental purpose
 
 10072012001:
 	Whole:
-10072012001:
 		1, start "Second Life of Damaged Kindle"
 		2, add notif. sound to each major func (playlist can't under damaged kindle)
-		3, finish screen.py notif. sound
+	Screensaver:
+		1, finish screen.py notif. sound
+
+10072012002:
+	Other:
+		1, move usbnetwork from independent state to file.sh
+		2, finish usbnetwork notif. sound
