@@ -1,8 +1,11 @@
 #!/mnt/us/python/bin/python2.6
-import sys
+import sys,os
 ## -----------Change it if different---------
 ## ----------------------------------------------
 o=open("/mnt/us/DK_System/xKindle/config.ini","a")
+##cmd="/test/bin/usbnetwork"
+##notif="/mnt/us/mplayer/mplayer /mnt/us/SLoDK/audio/usbNetworkTips.ogg"
+
 if sys.argv[1] == "kindle":
     for line in open("/mnt/us/DK_System/xKindle/configbk").read().splitlines():
         if  "DefaultSystem" in line:
@@ -19,3 +22,8 @@ if sys.argv[1] == "duokan":
             line=line+"\n"
             o.write(line)
     o.close
+
+##if sys.argv[1] == "usbnetwork":
+##	os.system(cmd)
+##	os.system(notif)
+
